--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,16 @@ body {
   margin-bottom: 20px;
 }
 
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 .btn {
+  /* size of button */
+  width: 100px;
   display: inline-block;
   background: #000;
   color: #fff;
@@ -54,12 +63,12 @@ body {
   width: 100%;
 }
 
-.task {
+/* .task {
   background: #f4f4f4;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
-}
+} */
 
 .task.reminder {
   border-left: 5px solid green;
