--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@ body {
   border-radius: 5px;
 }
 
+.container h3 {
+  /* center */
+  text-align: center;
+  padding-top: 20px;
+}
+
 .header {
   display: flex; 
   justify-content: space-between;
@@ -27,16 +33,8 @@ body {
   margin-bottom: 20px;
 }
 
-.task {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
 .btn {
-  /* size of button */
-  width: 100px;
+  size: auto;
   display: inline-block;
   background: #000;
   color: #fff;
@@ -63,21 +61,24 @@ body {
   width: 100%;
 }
 
-/* .task {
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background: #f4f4f4;
   margin: 5px;
+  margin-bottom: 20px;
   padding: 10px 20px;
   cursor: pointer;
-} */
+}
 
 .task.reminder {
   border-left: 5px solid green;
 }
 
 .task h3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  text-align: left;
+  flex: 0 0 60%;
 }
 
 .add-form {
