--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ body {
   align-items: center;
   background: #f4f4f4;
   margin: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding: 10px 20px;
   cursor: pointer;
 }
@@ -103,16 +103,17 @@ body {
 
 .form-control-check {
   display: flex;
-  align-items: center;
+  align-items: right;
   justify-content: space-between;
 }
 
 .form-control-check label {
-  flex: 1;
+  text-align: left;
 }
 
 .form-control-check input {
-  flex: 2;
+  width: 20px;
+  text-align: right;
   height: 20px;
 }
 
